--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -1,4 +1,5 @@
 .news-page
+    button.dark-btn Dark theme
     .main
         h1.h1 News
         ul.filter Сортувати:
@@ -27,30 +28,34 @@
                             h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
                             time(datetime="2023-01-13").newsDate 13 січня 2023
                     a(href="#").news__item
-                        picture.news__item-img
-                            source(media="(max-width: 500px)" srcset="img/img-third-mob.jpg")
-                            img(src="img/img-third.jpg" alt="Favbet")
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-third-mob.jpg")
+                                img(src="img/img-third.jpg" alt="Favbet")
+                        .news__item-txt
+                            h3.h3 Кожний виграний бій, в якому використано нашу допомогу, доводить, що українці непереможні
+                            time(datetime="2023-01-13").newsDate 13 січня 2023
+                    a(href="#").news__item
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-fourth-mob.jpg")
+                                img(src="img/img-fourth.jpg" alt="Favbet")
+                        .news__item-txt
+                            h3.h3 Код успіху. Як українська IT-індустрія зростає навіть під час війни
+                            time(datetime="2023-01-13").newsDate 13 січня 2023
+                    a(href="#").news__item
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-fifth-mob.jpg")
+                                img(src="img/img-fifth.jpg" alt="Favbet")
                         .news__item-txt
                             h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
                             time(datetime="2023-01-13").newsDate 13 січня 2023
                     a(href="#").news__item
-                        picture.news__item-img
-                            source(media="(max-width: 500px)" srcset="img/img-fourth-mob.jpg")
-                            img(src="img/img-fourth.jpg" alt="Favbet")
-                        .news__item-txt
-                            h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
-                            time(datetime="2023-01-13").newsDate 13 січня 2023
-                    a(href="#").news__item
-                        picture.news__item-img
-                            source(media="(max-width: 500px)" srcset="img/img-fifth-mob.jpg")
-                            img(src="img/img-fifth.jpg" alt="Favbet")
-                        .news__item-txt
-                            h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
-                            time(datetime="2023-01-13").newsDate 13 січня 2023
-                    a(href="#").news__item
-                        picture.news__item-img
-                            source(media="(max-width: 500px)" srcset="img/img-sixth-mob.jpg")
-                            img(src="img/img-sixth.jpg" alt="Favbet")
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-sixth-mob.jpg")
+                                img(src="img/img-sixth.jpg" alt="Favbet")
                         .news__item-txt
                             h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
                             time(datetime="2023-01-13").newsDate 13 січня 2023
