--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -39,8 +39,6 @@
         &__left
           width: 100%
           &-img
-            //width: 458px
-            //height: 259px
             width: 100%
             height: max-content
             aspect-ratio: 434 / 245
@@ -59,3 +57,157 @@
             margin-right: 3%
           &:nth-child(2n)
             margin-right: 0
+
+@media screen and (max-width: 900px)
+  .news-page
+    .content
+      .topNews
+        &__right
+          .h2
+              font-size: 23px
+          .newsInfo
+            font-size: 12px
+            line-height: 19px
+
+@media screen and (max-width: 795px)
+  .news-page
+    .content
+      .topNews
+        &__right
+          padding: 14px 14px 14px 19px
+          .h2
+            font-size: 22px
+            margin-bottom: 6px
+          .newsInfo
+            font-size: 11px
+            line-height: 17px
+
+@media screen and (max-width: 795px)
+  .news-page
+    .content
+      .topNews
+        &__right
+          padding: 12px 10px
+
+@media screen and (max-width: 705px)
+  .news-page
+    .main
+      width: 100%
+      padding: 0 15px
+    .newsDate
+      font-size: 13pxs
+    .content
+      .topNews
+        border-radius: 4px 0px 0px 4px
+        margin-bottom: 2%
+        &__left
+          &:after
+            display: none
+          &-img
+            border-radius: 4px 0px 0px 4px
+            &:before
+              display: none
+        &__right
+          width: 115%
+          .h2
+            font-size: 17px
+          .newsInfo
+            display: none
+      .news
+        flex-direction: column
+        &__item
+          flex-direction: row
+          margin-right: 0
+          &:after,
+          &:before
+            display: none
+          &:nth-child(3n)
+            margin-right: 0
+          &-img
+            border-radius: 4px 0px 0px 4px
+          &-txt
+            width: 115%
+            padding: 12px 10px
+            display: flex
+            flex-direction: column
+            .h3
+              font-size: 17px
+
+@media screen and (max-width: 500px)
+  .news-page
+    .main
+      margin-top: 20px
+    .h1
+      margin-bottom: 22px
+    .filter
+      font-size: 12px
+      margin-bottom: 25px
+      &__item
+        font-size: 12px
+        padding: 7px 16px 9px
+    .content
+      .topNews
+        border-radius: 8px
+        &__left
+          &-img
+            aspect-ratio: 150 / 82
+        &__right
+          padding: 12px 8px
+          width: 123%
+          .h2
+            font-size: 14px
+      .news
+        &__item
+          border-radius: 8px
+          &-img
+            aspect-ratio: 150 / 82
+          &-txt
+            padding: 12px 8px
+            width: 123%
+            .h3
+              font-size: 14px
+    .newsDate
+      font-size: 10px
+
+@media screen and (max-width: 350px)
+  .news-page
+    .main
+      padding: 0 12px
+    .content
+      .topNews
+        &__right
+          padding: 9px 7px
+          .h2
+            font-size: 12px
+      .news
+        &__item
+          &-txt
+            padding: 9px 7px
+            .h3
+              font-size: 12px
+      .newsDate
+        font-size: 9px
+
+@media screen and (max-width: 300px)
+  .news-page
+    .filter
+      font-size: 10px
+      margin-bottom: 20px
+      &__item
+        font-size: 11px
+        padding: 7px 15px 8px
+    .content
+      .topNews
+        &__right
+          padding: 7px 6px
+          .h2
+            font-size: 10px
+      .news
+        &__item
+          &-txt
+            padding: 7px 6px
+            .h3
+              font-size: 10px
+      .newsDate
+        font-size: 8px
+
