--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -123,7 +123,7 @@ body
   .content
     width: 100%
     .topNews
-      border-radius: 8px 0px 0px 8px
+      border-radius: 8px
       display: flex
       width: 100%
       margin-bottom: 23px
