--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -57,6 +57,10 @@
             margin-right: 3%
           &:nth-child(2n)
             margin-right: 0
+          &-txt
+            display: flex
+            flex-direction: column
+            min-height: 75px
 
 @media screen and (max-width: 900px)
   .news-page
@@ -98,8 +102,8 @@
       font-size: 13pxs
     .content
       .topNews
-        border-radius: 4px 0px 0px 4px
         margin-bottom: 2%
+        border-radius: 8px
         &__left
           &:after
             display: none
@@ -118,18 +122,20 @@
         &__item
           flex-direction: row
           margin-right: 0
+          border-radius: 8px
           &:after,
           &:before
             display: none
           &:nth-child(3n)
             margin-right: 0
           &-img
-            border-radius: 4px 0px 0px 4px
+            border-radius: 0
           &-txt
             width: 115%
             padding: 12px 10px
             display: flex
             flex-direction: column
+            min-height: auto
             .h3
               font-size: 17px
 
@@ -147,7 +153,7 @@
         padding: 7px 16px 9px
     .content
       .topNews
-        border-radius: 8px
+        border-radius: 4px
         &__left
           &-img
             aspect-ratio: 150 / 82
@@ -158,7 +164,7 @@
             font-size: 14px
       .news
         &__item
-          border-radius: 8px
+          border-radius: 4px
           &-img
             aspect-ratio: 150 / 82
           &-txt
