--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -222,10 +222,10 @@ body
         margin-right: 23px
         margin-bottom: 23px
         flex: 0 1 calc(33.3% - 15px)
-        border-radius: 8px 8px 0px 0px
         overflow: hidden
         cursor: pointer
         position: relative
+        border-radius: 8px
         &:after
           content: url('../img/arrow.svg')
           position: absolute
