--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -114,6 +114,7 @@ body
       border-radius: 4px
       transition: 0.2s ease
       cursor: pointer
+      white-space: nowrap
       &.active
         color: $white
         background-color: $magenta
