new letter-spacing: -0.5px;

--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -23,6 +23,7 @@ $font-robotoCondensed-regular: RobotoCondensed-Regular, sans-serif //400
 
 body
   overscroll-behavior: none
+  -webkit-tap-highlight-color: transparent
   //background: $white-bg
   background: blue
   img
