--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -162,6 +162,7 @@
           width: 123%
           .h2
             font-size: 14px
+            letter-spacing: -0.5px
       .news
         &__item
           border-radius: 4px
@@ -172,6 +173,7 @@
             width: 123%
             .h3
               font-size: 14px
+              letter-spacing: -0.5px
     .newsDate
       font-size: 10px
 
