--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -7,7 +7,8 @@
             li.filter__item за популярністю
         .content
             .content__top
-                a(href="#").topNews
+                .topNews
+                    a(href="#").topNews__link
                     .topNews__left
                         .topNews__left-img
                             picture.topImg
@@ -19,7 +20,8 @@
                         time(datetime="2023-01-13").newsDate 13 січня 2023
             .content__bottom
                 .news
-                    a(href="#").news__item
+                    .news__item
+                        a(href="#").news__item-link
                         .news__item-img
                             picture
                                 source(media="(max-width: 500px)" srcset="img/img-second-mob.jpg")
@@ -27,7 +29,8 @@
                         .news__item-txt
                             h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
                             time(datetime="2023-01-13").newsDate 13 січня 2023
-                    a(href="#").news__item
+                    .news__item
+                        a(href="#").news__item-link
                         .news__item-img
                             picture
                                 source(media="(max-width: 500px)" srcset="img/img-third-mob.jpg")
@@ -35,7 +38,8 @@
                         .news__item-txt
                             h3.h3 Кожний виграний бій, в якому використано нашу допомогу, доводить, що українці непереможні
                             time(datetime="2023-01-13").newsDate 13 січня 2023
-                    a(href="#").news__item
+                    .news__item
+                        a(href="#").news__item-link
                         .news__item-img
                             picture
                                 source(media="(max-width: 500px)" srcset="img/img-fourth-mob.jpg")
@@ -43,7 +47,8 @@
                         .news__item-txt
                             h3.h3 Код успіху. Як українська IT-індустрія зростає навіть під час війни
                             time(datetime="2023-01-13").newsDate 13 січня 2023
-                    a(href="#").news__item
+                    .news__item
+                        a(href="#").news__item-link
                         .news__item-img
                             picture
                                 source(media="(max-width: 500px)" srcset="img/img-fifth-mob.jpg")
@@ -51,7 +56,8 @@
                         .news__item-txt
                             h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
                             time(datetime="2023-01-13").newsDate 13 січня 2023
-                    a(href="#").news__item
+                    .news__item
+                        a(href="#").news__item-link
                         .news__item-img
                             picture
                                 source(media="(max-width: 500px)" srcset="img/img-sixth-mob.jpg")
