--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -12,20 +12,10 @@ $font-robotoCondensed-bold: RobotoCondensed-Bold, sans-serif //700
 $font-robotoCondensed-medium: RobotoCondensed-Medium, sans-serif //500
 $font-robotoCondensed-regular: RobotoCondensed-Regular, sans-serif //400
 
-.dark-btn
-  position: absolute
-  right: 0
-  top: 0
-  width: 50px
-  height: 35px
-  cursor: pointer
-  z-index: 10
-
 body
   overscroll-behavior: none
   -webkit-tap-highlight-color: transparent
-  //background: $white-bg
-  background: blue
+  background: $white-bg
   img
     max-width: 100%
     height: auto
@@ -263,9 +253,6 @@ body
           border-radius: 4px
         &:nth-child(3n)
           margin-right: 0
-        //&:nth-child(4),
-        //&:nth-child(5)
-        //  display: none
         &-link
           display: block
           position: absolute
