--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -22,6 +22,7 @@ body
 
 // DARK THEME
 .dark
+  background: $dark-theme-bg
   .news-page
     background: $dark-theme-bg
     .h1
@@ -93,7 +94,8 @@ body
     font-family: $font-robotoCondensed-medium
     color: $light-blue
     font-size: 14px
-    display: flex
+    //display: flex
+    display: none
     align-items: center
     margin-bottom: 30px
     &__item
