--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -64,3 +64,48 @@
                         .news__item-txt
                             h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
                             time(datetime="2023-01-13").newsDate 13 січня 2023
+                    .news__item
+                        a(href="#").news__item-link
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-second-mob.jpg")
+                                img(src="img/img-second.jpg" alt="Favbet")
+                        .news__item-txt
+                            h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
+                            time(datetime="2023-01-13").newsDate 13 січня 2023
+                    .news__item
+                        a(href="#").news__item-link
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-third-mob.jpg")
+                                img(src="img/img-third.jpg" alt="Favbet")
+                        .news__item-txt
+                            h3.h3 Кожний виграний бій, в якому використано нашу допомогу, доводить, що українці непереможні
+                            time(datetime="2023-01-13").newsDate 13 січня 2023
+                    .news__item
+                        a(href="#").news__item-link
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-fourth-mob.jpg")
+                                img(src="img/img-fourth.jpg" alt="Favbet")
+                        .news__item-txt
+                            h3.h3 Код успіху. Як українська IT-індустрія зростає навіть під час війни
+                            time(datetime="2023-01-13").newsDate 13 січня 2023
+                    .news__item
+                        a(href="#").news__item-link
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-fifth-mob.jpg")
+                                img(src="img/img-fifth.jpg" alt="Favbet")
+                        .news__item-txt
+                            h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
+                            time(datetime="2023-01-13").newsDate 13 січня 2023
+                    .news__item
+                        a(href="#").news__item-link
+                        .news__item-img
+                            picture
+                                source(media="(max-width: 500px)" srcset="img/img-sixth-mob.jpg")
+                                img(src="img/img-sixth.jpg" alt="Favbet")
+                        .news__item-txt
+                            h3.h3 Кібервійсько Мінцифри, нові функції «Дії» та секрети продуктивності
+                            time(datetime="2023-01-13").newsDate 13 січня 2023
