--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -52,6 +52,21 @@ body
 
 // END DARK THEME
 
+.news__show-more-btn
+  margin: 0 auto
+  padding: 10px 20px
+  color: white
+  background-color: #05c489
+  border: none
+  border-radius: 6px
+  font-size: 16px
+  cursor: pointer
+  align-self: center
+  margin-bottom: 15px
+  &:hover
+    background-color: #37d0a1
+
+
 .news-page
   position: relative
   width: 100%
@@ -117,6 +132,9 @@ body
         background-color: $magenta
   .content
     width: 100%
+    &__bottom
+      display: flex
+      flex-direction: column
     .topNews
       border-radius: 8px
       display: flex
@@ -220,7 +238,7 @@ body
       display: flex
       flex-wrap: wrap
       justify-content: flex-start
-      margin-bottom: 38px
+      margin-bottom: 10px
       &__item
         display: flex
         flex-direction: column
