upd block news height

--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -291,8 +291,11 @@ body
             height: 100%
             object-fit: cover
         &-txt
+          display: flex
+          flex-direction: column
           background-color: $light-grey
           padding: 8px 16px
+          height: 82px
           .h3
             font-family: $font-robotoCondensed-bold
             color: $light-blue
