--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -61,6 +61,7 @@
             display: flex
             flex-direction: column
             min-height: 75px
+            height: auto
 
 @media screen and (max-width: 900px)
   .news-page
